event condiotion logic introduced